--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,16 @@
 
 body {
 	color: rgb(var(--foreground-rgb));
-	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
+	background: linear-gradient(
+			to bottom,
+			transparent,
+			rgb(var(--background-end-rgb))
+		)
 		rgb(var(--background-start-rgb));
+}
+
+@layer components {
+	.container {
+		@apply mx-auto max-w-screen-xl;
+	}
 }
